sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/Location_Roles__c.object-meta.xml
<CustomObject>
    <label>Location Roles</label>
    <nameField>
        <label>Location Roles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>