sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Account_Program__c.field-meta.xml
<CustomField>
    <fullName>Account_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Program</label>
    <referenceTo>Account_Program__c</referenceTo>
    <relationshipLabel>Location Roles</relationshipLabel>
    <relationshipName>Location_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>