sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>Date member has been in this role from</description>
    <inlineHelpText>Date member has been in this role from</inlineHelpText>
    <label>Date From</label>
    <type>Date</type>
</CustomField>