sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>Date member has been in this role to.</description>
    <inlineHelpText>Date member has been in this role to. Leave blank if current.</inlineHelpText>
    <label>Date To</label>
    <type>Date</type>
</CustomField>