sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Roles</relationshipLabel>
    <relationshipName>Location_Roles1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>