sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Owner_and_Operator__c.field-meta.xml
<CustomField>
    <fullName>Owner_and_Operator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Owner(Franchisee) the same as the FLO</description>
    <inlineHelpText>Is the Owner(Franchisee) the same as the FLO?</inlineHelpText>
    <label>Owner and Operator?</label>
    <type>Checkbox</type>
</CustomField>