sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <description>The person that plays a role at this location</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Location Roles (Contact)</relationshipLabel>
    <relationshipName>Location_Roles1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>