sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the assigned person</description>
    <inlineHelpText>What is this person&#39;s role?</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Franchisee</fullName>
                <default>true</default>
                <label>Franchisee</label>
            </value>
            <value>
                <fullName>Financier</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>