sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/recordTypes/Location_Roles.recordType-meta.xml
<RecordType>
    <fullName>Location_Roles</fullName>
    <active>true</active>
    <label>Location Roles</label>
</RecordType>