sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/validationRules/Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Check</fullName>
    <active>true</active>
    <description>Ensure Date To is not greater than Date From.</description>
    <errorConditionFormula>AND
(
 Date_To__c &lt; Date_From__c
)</errorConditionFormula>
    <errorMessage>Date To cannot be greater than Date From</errorMessage>
</ValidationRule>