sfSandBoxCode/force-app/main/default/objects/Location_Roles__c/validationRules/Owner_Operator_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Operator_Check</fullName>
    <active>true</active>
    <description>Check that the Owner Operator field is only checked if the Location Role = Franchisee</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Role__c, &#39;Franchisee&#39;)),
 Owner_and_Operator__c = True
)</errorConditionFormula>
    <errorMessage>Owner Operator cannot be true if the Role is not &#39;Franchisee&#39;</errorMessage>
</ValidationRule>